# libvips

./: .gitignore  CMakeLists.txt  configure.in
libvips/: CMakeLists.txt
libvips/arithmetic/: CMakeLists.txt
libvips/colour/: CMakeLists.txt  profiles.c
libvips/conversion/: CMakeLists.txt
libvips/convolution/: CMakeLists.txt
libvips/create/: CMakeLists.txt
libvips/deprecated/: CMakeLists.txt
libvips/draw/: CMakeLists.txt
libvips/foreign/: CMakeLists.txt
libvips/freqfilt/: CMakeLists.txt
libvips/histogram/: CMakeLists.txt
libvips/include/vips/: TODO  vips.h
libvips/iofuncs/: CMakeLists.txt
libvips/morphology/: CMakeLists.txt
libvips/mosaicing/: CMakeLists.txt
libvips/resample/: CMakeLists.txt
tools/: CMakeLists.txt  vipsedit.c
