add_library(libdeprecated OBJECT 
    arith_dispatch.c
    cimg_dispatch.c
    colour_dispatch.c
    conver_dispatch.c
    convol_dispatch.c
    cooc_funcs.c
    deprecated_dispatch.c
    dispatch_types.c
    fits.c
    format.c
    format_dispatch.c
    freq_dispatch.c
    glds_funcs.c
    hist_dispatch.c
    im_align_bands.c
    im_analyze2vips.c
    im_benchmark.c
    im_bernd.c
    im_clamp.c
    im_cmulnorm.c
    im_convsub.c
    im_csv2vips.c
    im_debugim.c
    im_dif_std.c
    im_exr2vips.c
    im_fav4.c
    im_freq_mask.c
    im_gadd.c
    im_gaddim.c
    im_gfadd.c
    im_gradcor.c
    im_jpeg2vips.c
    im_lab_morph.c
    im_line.c
    im_linreg.c
    im_litecor.c
    im_magick2vips.c
    im_mask2vips.c
    im_matcat.c
    im_matinv.c
    im_matmul.c
    im_mattrn.c
    im_maxpos_avg.c
    im_maxpos_subpel.c
    im_measure.c
    im_nifti2vips.c
    im_openslide2vips.c
    im_png2vips.c
    im_point_bilinear.c
    im_ppm2vips.c
    im_print.c
    im_printlines.c
    im_resize_linear.c
    im_setbox.c
    im_simcontr.c
    im_slice.c
    im_spatres.c
    im_stretch3.c
    im_thresh.c
    im_tiff2vips.c
    im_video_test.c
    im_vips2csv.c
    im_vips2dz.c
    im_vips2jpeg.c
    im_vips2mask.c
    im_vips2png.c
    im_vips2ppm.c
    im_vips2tiff.c
    im_vips2webp.c
    im_webp2vips.c
    im_zerox.c
    inplace_dispatch.c
    lazy.c
    mask_dispatch.c
    matalloc.c
    matlab.c
    morph_dispatch.c
    mosaicing_dispatch.c
    other_dispatch.c
    package.c
    radiance.c
    raw.c
    rename.c
    resample_dispatch.c
    rotmask.c
    rw_mask.c
    tone.c
    video_dispatch.c
    vips7compat.c
)

find_package(unofficial-glib CONFIG REQUIRED)
target_link_libraries(libdeprecated PRIVATE unofficial::glib::gio unofficial::glib::glib unofficial::glib::gmodule unofficial::glib::gobject)

